--- a/sandbox/styleguide/source/_layouts/page.html
+++ b/sandbox/styleguide/source/_layouts/page.html
@@ -1,14 +1,44 @@
 ---
 layout: default
 ---
-<article class="post">
-
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title | escape }}</h1>
-  </header>
-
-  <div class="post-content">
-    {{ content }}
-  </div>
-
-</article>
+<div class="o-layout o-layout--article">
+  <aside>
+    <div class="c-nav c-nav--vertical">
+      <nav>
+        <header role="heading">
+          <h2>Bolt</h2>
+        </header>
+        <ul>
+          <li><a href="javascript:">Get Started</a></li>
+          <li><a href="javascript:">Principles</a></li>
+          <li><a href="javascript:">Elements</a></li>
+          <li><a href="javascript:">Objects</a></li>
+          <li><a href="javascript:">Components</a></li>
+          <li><a href="javascript:">Themes</a></li>
+          <li><a href="javascript:">Utilities</a></li>
+        </ul>
+      </nav>
+    </div>
+  </aside>
+  <main>
+    <div class="o-inset">
+      <article class="c-article">
+        <header role="banner">
+          <h1>
+            {{ page.title | escape }}
+          </h1>
+        </header>
+        <div itemprop="articleBody">
+          {{ content }}
+        </div>
+      </article>
+    </div>
+  </main>
+  <footer role="contentinfo">
+    <small>
+      <p>
+        <strong>&copy; Pegasystems, Inc.</strong>
+      </p>
+    </small>
+  </footer>
+</div>
