style: ui headings

--- a/sandbox/styleguide/source/_layouts/home.html
+++ b/sandbox/styleguide/source/_layouts/home.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="o-layout o-layout--fullscreen-hero">
-  <div class="o-layout__main t-dark">
+  <div class="o-layout__main">
     <div class="o-inset">
       <div class="o-wrapper">
         <main>
