WIP: stashing latest work w/ passing Styles build task, prior to testing eslint fix

--- a/packages/bolt-build-tools/styles/tests/basics/expected/style.css
+++ b/packages/bolt-build-tools/styles/tests/basics/expected/style.css
@@ -1,9 +1,2 @@
-body {
-  z-index: 42;
-}
-
-.site {
-  padding: 10px;
-}
-
+body{z-index:42}.c-site{padding:12px}.u-test-hide{display:none!important}.u-test-show{display:block!important}
 /*# sourceMappingURL=style.css.map */
