--- a/sandbox/styleguide/source/_layouts/home.html
+++ b/sandbox/styleguide/source/_layouts/home.html
@@ -16,15 +16,7 @@ layout: default
   <div class="o-layout__footer">
     <div class="o-inset">
       <div class="o-wrapper">
-        <footer role="contentinfo">
-          <div class="c-article">
-            <small>
-              <p>
-                <strong>&copy; Pegasystems, Inc.</strong>
-              </p>
-            </small>
-          </div>
-        </footer>
+        {% include footer.html %}
       </div>
     </div>
   </div>
