--- a/sandbox/styleguide/source/styles/02-tools/_tools.spacing.scss
+++ b/sandbox/styleguide/source/styles/02-tools/_tools.spacing.scss
@@ -15,7 +15,7 @@
 }
 
 @mixin paragraph-spacing {
-  @include margin(($article-leading + em),0,0,0);
+  @include margin(($font-leading--base + em),0,0,0);
 }
 
 @mixin null-spacing {
