--- a/sandbox/styleguide/source/styles/05-objects/_objects.containers.scss
+++ b/sandbox/styleguide/source/styles/05-objects/_objects.containers.scss
@@ -83,7 +83,11 @@ body {
       max-width: $article-line-length + ch;
 
       aside {
-        @include margin(0,calc(#{$gutter*1.5 + rem} - #{$golden-aside-width + vw}),($font-leading--base + rem),($gutter + rem));
+        @include margin(($font-leading--base + rem),calc(#{$gutter*1.5 + rem} - #{$golden-aside-width + vw}),($font-leading--base + rem),($gutter + rem));
+
+        &:first-child {
+          margin-top: 0;
+        }
       }
     }
   }
