docs: typography documentation

--- a/sandbox/styleguide/source/styles/06-components/_components.article.scss
+++ b/sandbox/styleguide/source/styles/06-components/_components.article.scss
@@ -3,6 +3,10 @@
 
   line-height: $font-leading--base;
 
+  strong {
+    font-weight: $font-weight--semibold; // This is an edge case to use semibold.
+  }
+
   address {
     display: inline-block;
   }
