--- a/sandbox/styleguide/source/_layouts/default.html
+++ b/sandbox/styleguide/source/_layouts/default.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+<html lang="{{ page.lang | default: site.lang | default: "en" }}" class="js-fonts-loaded">
 
   {% include head.html %}
 
-  <body class="js-fonts-loaded">
+  <body>
     {{ content }}
   </body>
 
