--- a/packages/bolt/bolt.scss
+++ b/packages/bolt/bolt.scss
@@ -1,14 +1,14 @@
-
+@import '@bolt/components-button';
 // $btn-bg-color: #ff561d;
 // @import '@bolt/components-button';
 // // @import '@bolt/objects-grid';
 // //
 //
 //
-// .c-button {
-//   @include button();
-//   @include button-color(purple);
-// }
+.c-button {
+  @include button();
+  @include button-color(purple);
+}
 
 
 p {
