--- a/sandbox/styleguide/source/styles/06-components/_components.article.scss
+++ b/sandbox/styleguide/source/styles/06-components/_components.article.scss
@@ -105,6 +105,7 @@
   figure {
     @include padding(($font-leading--base/4 + rem),0,0,0);
     @include text-align(center);
+    @include horizontal-scroll;
 
     > div,
     > img,
