--- a/sandbox/styleguide/source/styles/07-themes/_themes.dark.scss
+++ b/sandbox/styleguide/source/styles/07-themes/_themes.dark.scss
@@ -35,6 +35,12 @@
     background: $inverse-highlight-background-color;
   }
 
+  table {
+    td {
+      border-color: $inverse-border-color;
+    }
+  }
+
   .c-article {
     blockquote {
       border-color: $inverse-subtle-background-color;
