--- a/sandbox/styleguide/source/styles/07-themes/_themes.light.scss
+++ b/sandbox/styleguide/source/styles/07-themes/_themes.light.scss
@@ -36,6 +36,12 @@ body,
     background: $highlight-background-color;
   }
 
+  table {
+    td {
+      border-color: $border-color;
+    }
+  }
+
   .c-article {
     blockquote {
       border-color: $subtle-background-color;
