style: homepage fix

--- a/sandbox/styleguide/source/styles/05-objects/_objects.containers.scss
+++ b/sandbox/styleguide/source/styles/05-objects/_objects.containers.scss
@@ -110,7 +110,7 @@ body {
     flex: auto;
 
     > * {
-      @include margin(auto,0,auto,0);
+      @include margin(auto,auto,auto,auto);
     }
   }
 
