fix: adding home link in nav

--- a/sandbox/styleguide/source/_includes/doc-nav.html
+++ b/sandbox/styleguide/source/_includes/doc-nav.html
@@ -1,6 +1,6 @@
 <nav>
   <header role="heading">
-    <h2>Bolt v0.1</h2>
+    <h2><a href="/">Bolt v0.1</a></h2>
   </header>
   <ul>
     <li><a href="/getting-started">Getting Started</a></li>
