--- a/packages/bolt-core/02-tools/tools.all.scss
+++ b/packages/bolt-core/02-tools/tools.all.scss
@@ -1,7 +1,7 @@
-@import '@bolt/tools-global';
-@import '@bolt/tools-breakpoints';
+// @import '@bolt/tools-breakpoints';
 @import '@bolt/tools-button-colors';
 @import '@bolt/tools-color-palette';
+@import '@bolt/tools-global';
 @import '@bolt/tools-sassy-maps';
 @import '@bolt/tools-spacing';
 @import '@bolt/tools-strip-unit';
