--- a/sandbox/styleguide/source/styles/07-themes/_themes.dark.scss
+++ b/sandbox/styleguide/source/styles/07-themes/_themes.dark.scss
@@ -58,7 +58,7 @@
   }
 
   .o-layout--article {
-    @include respond-to($max: $bp-layout--article) {
+    @include breakpoint(0 $bp-layout--article) {
       > aside {
         .c-nav {
           border-color: $inverse-border-color;
@@ -70,7 +70,7 @@
       }
     }
 
-    @include respond-to($min: $bp-layout--article) {
+    @include breakpoint($bp-layout--article) {
       > aside {
         .c-nav {
           border-color: $inverse-border-color;
