--- a/packages/bolt/bolt.css
+++ b/packages/bolt/bolt.css
@@ -2,8 +2,8 @@
 \*------------------------------------*/
 /*------------------------------------*  Global Settings
 \*------------------------------------*/
-/*------------------------------------*  Breakpoint variables
-\*------------------------------------*/
+/* ------------------------------------ *  Breakpoint variables
+\* ------------------------------------ */
 /*------------------------------------*  Defining system and custom fonts
 \*------------------------------------*/
 /*
@@ -34,10 +34,6 @@
 /*------------------------------------*  Tools
 \*------------------------------------*/
 /*------------------------------------*  Text Rendering
-\*------------------------------------*/
-/*------------------------------------*  Breakpoints
-\*------------------------------------*/
-/*------------------------------------*  Screen Resolution
 \*------------------------------------*/
 /*------------------------------------*  Button Colors
 \*------------------------------------*/
@@ -132,13 +128,13 @@ html {
   font-size: 15px;
 }
 
-@media only screen and (min-width: 769px) {
+@media (min-width: 600px) {
   html {
-    font-size: calc(15px + 3 * (100vw - 768px) / (1152));
+    font-size: calc(15px + 3 * (100vw - 600px) / (600px));
   }
 }
 
-@media only screen and (min-width: 1921px) {
+@media (min-width: 1200px) {
   html {
     font-size: 18px;
   }
@@ -156,15 +152,24 @@ body {
   font-family: "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   font-size: 1rem;
-  line-height: 1.65;
   line-height: 1.111;
   font-weight: 800;
 }
 
-.js-fonts-loaded h1, .js-fonts-loaded h2, .js-fonts-loaded h3, .js-fonts-loaded h4, .js-fonts-loaded h5, .js-fonts-loaded h6 {
+.js-fonts-loaded h1, .js-fonts-loaded
+h2, .js-fonts-loaded
+h3, .js-fonts-loaded
+h4, .js-fonts-loaded
+h5, .js-fonts-loaded
+h6 {
   font-family: "Open Sans", "Helvetica Neue", sans-serif;
 }
 
