docs: organizing a few sassdocs

--- a/packages/bolt-core/01-settings/settings-font-weight/index.scss
+++ b/packages/bolt-core/01-settings/settings-font-weight/index.scss
@@ -3,7 +3,7 @@
 \* ------------------------------------ */
 
 ////
-/// @group Settings: font weight mapping
+/// @group Settings: Typography
 /// @author Mike Mai
 ////
 $font-weight--regular:   400 !default;
