--- a/packages/bolt-core/02-tools/tools-font-kerning/index.scss
+++ b/packages/bolt-core/02-tools/tools-font-kerning/index.scss
@@ -8,8 +8,8 @@
 ////
 
 
-/// This applies default font kerning styles for supporting browsers
-@mixin kerning() {
+/// This applies default font kerning styles for supporting browsers.
+@mixin font-kerning() {
   font-feature-settings: 'kern';
   font-kerning: normal; // Safari 7+, Firefox 24+, Chrome 33(?)
 }
