--- a/sandbox/pattern-library/source/_meta/_00-head.twig
+++ b/sandbox/pattern-library/source/_meta/_00-head.twig
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
 
-    <link rel="stylesheet" href="../../styles/bolt.css?{{ cacheBuster }}" media="all" />
-    <link rel="stylesheet" href="../../styles/bolt-styleguide.css?{{ cacheBuster }}" media="all" />
+    <link rel="stylesheet" href="../../../styles/bolt.css?{{ cacheBuster }}" media="all" />
+    <link rel="stylesheet" href="../../../styles/bolt-styleguide.css?{{ cacheBuster }}" media="all" />
 
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     {{ patternLabHead | raw }}
