--- a/sandbox/styleguide/source/_includes/head.html
+++ b/sandbox/styleguide/source/_includes/head.html
@@ -6,11 +6,11 @@
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
-  <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+  <!-- <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}"> -->
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
 
-  <link rel="stylesheet" href="{{ "/styles/bolt-styleguide.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/styles/boltdesignsystem.com.css" | relative_url }}">
 
   {% if jekyll.environment == 'production' and site.google_analytics %}
   {% include google-analytics.html %}
